*mysqld_exporter-0.12.1_p20200622 (27 Sep 2020)

  27 Sep 2020; Manuel Friedli <manuel@gentoo.org>
  +files/mysqld_exporter-0.12.1-skip-tests.patch,
  +mysqld_exporter-0.12.1_p20200622.ebuild:
  app-metrics/mysqld_exporter: Add new ebuild.

*mysqld_exporter-0.11.0 (11 Nov 2019)

  11 Nov 2019;  <manuel@gentoo.org> +files/mysqld_exporter-r1.confd,
  +files/mysqld_exporter-r1.initd, +files/mysqld_exporter.confd,
  +files/mysqld_exporter.logrotate, +files/mysqld_exporter.service,
  +metadata.xml, +mysqld_exporter-0.11.0.ebuild:
  app-metrics/mysqld_exporter: Add ebuild with systemd service file.